homework/5.kubernetes-network/6_service-postgresql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: postgresql
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgresql-app
  type: ClusterIP
